src/objects/ADvendio__PublicationDate__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdfillRate__c</fullName>
        <description>How high is the percentage of already booked Ads for this issue date / Publication Date, in relation to book size?</description>
        <inlineHelpText>How high is the percentage of already booked Ads for this issue date / Publication Date, in relation to book size?</inlineHelpText>
        <label>Ad fill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__BookSize__c</fullName>
        <description>How many pages are planned for this issue date / Publication Date?</description>
        <inlineHelpText>How many pages are planned for this issue date / Publication Date?</inlineHelpText>
        <label>Book Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Circulation__c</fullName>
        <description>Please enter the circulation for that Publication Date here.</description>
        <inlineHelpText>Please enter the circulation for that Publication Date here.</inlineHelpText>
        <label>Circulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <description>Date of invoice</description>
        <inlineHelpText>Date of invoice</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaterialDueDate__c</fullName>
        <description>Please select the delivery deadline for printed material.</description>
        <inlineHelpText>Please select the delivery deadline for printed material.</inlineHelpText>
        <label>Material Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlannedAdFillRate__c</fullName>
        <description>Here you can enter, what percentage of this Issue / Publication Date is supposed to be sold as Ads, in relation to the actual book size.</description>
        <inlineHelpText>Here you can enter, what percentage of this Issue / Publication Date is supposed to be sold as Ads, in relation to the actual book size.</inlineHelpText>
        <label>Planned Ad fill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReservationBookingDeadline__c</fullName>
        <description>Closing date, bookings are only possible before this deadline.</description>
        <inlineHelpText>Closing date, bookings are only possible before this deadline.</inlineHelpText>
        <label>Reservation/Booking Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__RevenueRecognitionDate__c</fullName>
        <description>Which accounting period should be recognized?</description>
        <inlineHelpText>Which accounting period should be recognized?</inlineHelpText>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <inlineHelpText>Define to what site this publication date belongs.</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Publication Dates</relationshipLabel>
        <relationshipName>PublicationDates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Publication Date</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__PublicationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>